# Media-Player-MVVM

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
Source/: CMakeLists.txt
Source/Config/: .env  AppConfig.cpp  AppConfig.hpp  AppState.cpp  AppState.hpp  CMakeLists.txt
Source/Model/: AdminModel.cpp  AdminModel.hpp  AppState.cpp  AppState.hpp  AuthModel.cpp  AuthModel.hpp  CMakeLists.txt  PlaylistModel.cpp  PlaylistModel.hpp  SongModel.cpp  SongModel.hpp  UartModel.cpp  UartModel.hpp
Source/Model/Admin/: AdminModel.cpp  AdminModel.hpp
Source/Model/Authentication/: AuthModel.cpp
Source/Model/Client/: PlaylistModel.cpp  PlaylistModel.hpp  SongModel.cpp  SongModel.hpp  UartModel.cpp  UartModel.hpp
Source/View/: AdminDashboard.qml  AdminMediaFilesView.qml  AdminUploadFile.qml  AppState.qml  LoginView.qml  Main.qml  MediaFileView.qml  MediaPlayerView.qml  NavigationManager.qml  PlaylistView.qml  ProfileView.qml  RegisterView.qml
Source/View/Admin/: AdminDashboard.qml  AdminMediaFilesView.qml  AdminUploadFile.qml  AdminViewUsers.qml
Source/View/Authentication/: LoginView.qml  RegisterView.qml
Source/View/Client/: AddSong.qml  MediaFileView.qml  MediaPlayerView.qml  PlaylistView.qml  ProfileView.qml
Source/View/Components/: HoverButton.qml  SliderComponent.qml
Source/ViewModel/: AdminViewModel.cpp  AdminViewModel.hpp  AppState.cpp  AuthViewModel.cpp  AuthViewModel.hpp  CMakeLists.txt  PlaylistViewModel.cpp  PlaylistViewModel.hpp  SongViewModel.cpp  SongViewModel.hpp  UartViewModel.cpp
Source/ViewModel/Admin/: AdminViewModel.hpp
Source/ViewModel/Authentication/: AuthViewModel.cpp
Source/ViewModel/Client/: PlaylistViewModel.hpp  SongViewModel.cpp  SongViewModel.hpp  UartViewModel.cpp  UartViewModel.hpp
